<resources>
    <string name="app_name">InvoiceScanner</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="request_permission_ext_save">Application can\'t save Images without external write permsission </string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[


            JAJAJAJA


        ]]>
    </string>
    <string name="camera">Camera</string>
    <string name="archive">Archive</string>
    <string name="favorites">Favorites</string>
    <string name="about">About</string>
    <string name="authors">Authors</string>
    <string name="author_names">Meissner Andy, Sansone Giuseppe</string>
    <string name="version">Version</string>
    <string name="save">Save</string>
    <string name="new_invoice">New Invoice</string>
    <string name="iban">IBAN</string>
    <string name="amount">Amount</string>
    <string name="bic">BIC</string>
    <string name="receiver">Receiver</string>
    <string name="details">Details</string>
    <string name="empty">empty</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Hint</string>
    <string name="edit">Edit</string>
    <string name="add_photo">Add Photo</string>
    <string name="no_iban">No IBAN found</string>
    <string name="no_bic">No BIC found</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
</resources>
