<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/save_button"
        android:title="@string/save"
        android:icon="@drawable/ic_menu_save"
        android:visible="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/add_photo"
        android:title="@string/add_photo"
        android:icon="@drawable/ic_menu_add_image"
        android:visible="true"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom" />

</menu>